tests/fail/sock4.rs
use net_macros::sock4;

fn main() {
    let a = sock4!("192.168.11:300");
}
