tests/fail/sock4.stderr
error: invalid IPv4 socket address syntax
 --> tests/fail/sock4.rs:4:20
  |
4 |     let a = sock4!("192.168.11:300");
  |                    ^^^^^^^^^^^^^^^^
